--- a/src/main/java/com/cloudhealth/hackaton/CostWindow.form
+++ b/src/main/java/com/cloudhealth/hackaton/CostWindow.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="593" height="328"/>
     </constraints>
-    <properties/>
+    <properties>
+      <maximumSize width="435" height="164"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="c7d58" class="javax.swing.JLabel">
@@ -93,6 +95,7 @@
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <selected value="true"/>
           <text value="HOURLY"/>
         </properties>
       </component>
@@ -114,4 +117,11 @@
       </component>
     </children>
   </grid>
+  <buttonGroups>
+    <group name="radioButtonGroup">
+      <member id="9c57a"/>
+      <member id="77ca3"/>
+      <member id="f3bd7"/>
+    </group>
+  </buttonGroups>
 </form>
