--- a/src/main/java/com/cloudhealth/hackaton/CostWindow.form
+++ b/src/main/java/com/cloudhealth/hackaton/CostWindow.form
@@ -50,14 +50,6 @@
           <text value="Replicas:"/>
         </properties>
       </component>
-      <component id="3464" class="javax.swing.JTextField" binding="apiKey">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="cc214" class="javax.swing.JButton" binding="calculateButton" default-binding="true">
         <constraints>
           <grid row="5" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -123,9 +115,17 @@
           <text value="Cluster Name:"/>
         </properties>
       </component>
-      <component id="961f0" class="javax.swing.JTextField" binding="clusterId" custom-create="true">
+      <component id="961f0" class="javax.swing.JTextField" binding="clusterId">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="3464" class="javax.swing.JTextField" binding="apiKey">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
